callbacks, promesas, consumo de api, servidor de node, express.

--- a/callbacks-Promesas-JS/index.html
+++ b/callbacks-Promesas-JS/index.html
@@ -8,6 +8,7 @@
 <body>
     
 
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./promesas.js"></script>
 </body>
 </html>
